--- a/src/app/board-square/board-square.component.css
+++ b/src/app/board-square/board-square.component.css
@@ -1,10 +1,3 @@
-.square {
-  /* margin: -1pt -1pt; */
-  font-family: Arial;
-  border: none;
-  padding: 10pt;
-  cursor: default;
-}
 .wrapper {
   position: relative;
   height: 0pt;
@@ -21,17 +14,11 @@
   position: absolute;
 }
 
-.shell {
-  height: 100%;
-  width: 100%;
-
-}
 
 .overlay {
-  height: 80%;
-  width: 80%;
-  margin: 10%;
-  padding: 0%;
+  height: 100%;
+  width: 100%;
+  /* padding: 20%; */
   border-width: 0%;
   border-radius: 50%;
   display: inline-block;
